--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,38 @@
+
+
 body {
   margin: 0;
   padding: 0;
+  background-color: #202020;
+}
+
+* {
+  background-color: #202020;
+}
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #202020;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav li {
+  list-style-type: none;
+  font-size: 25px;
+  color: #c9c9c9;
+}
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.main {
+  margin-left: 160px; 
+  padding: 0px 10px;
+
 }
