--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,13 +71,13 @@ body {
 }
 
 .cards__album__text {
-  color: #FA233B;
+  color: #F82D48;
   font-size: 14px;
   text-align: left;
 }
 
 .cards__artist_text {
-  color: #FA233B;
+  color: #F82D48;
   font-size: 10px;
   text-align: left;
   opacity: 40%;
@@ -98,6 +98,11 @@ body {
   }
 }
 
+.sortButtons{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
 
 * {
   background-color: #202020;
