--- a/client/src/components/searchForm.css
+++ b/client/src/components/searchForm.css
@@ -1,8 +1,4 @@
-.Welcome-page-form {
-    justify-content: center;
-    align-content: center;
-    display: grid;
-  }
+
   
   .welcome-page-searchbar {
     position: absolute;
@@ -10,44 +6,56 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-  }
+     
+  } 
 
   .welcome-input:hover {
     border-radius: 50px;
     border-bottom: 3px solid #fa233b;
     border-top: 3px solid #fa233b;
     border-color: #fa233b;
+    background-color: crimson;
     width: 500px;
-    height: 90px;
-    z-index: 5;
-    color: red;
+    height: 50px;
+    /* z-index: 5; */
     
-  }
+  } 
 
- 
-  .welcome-input {
+ /* search bar adjustments */
+  
+ .welcome-input {
   border: none;
-  outline: none;
-  background: none;
-  color: rgb(216, 216, 8);
+  box-shadow: 0 0 25px 0 crimson,
+  0 20px 25px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
+  background:crimson;
   height: 70px;
   width: 0px;
-  user-select: none;
   padding-right: 60px;
   font-size: 50px;
   font-family: "Helvetica", sans-serif;
   cursor: pointer;
   transition: 1s;
-  text-indent: 55px;
+  text-indent: 50px;
+  box-shadow: 0 0 25px 0 crimson,
+                0 20px 25px 0 rgba(0, 0, 0, 0.2);
+   
+} 
+
+/* Button adjustments */
+#btn {
+   border-radius: 100px;
+   box-shadow: 0 0 25px 0 crimson;
 }
 
-.fas:hover {
-      color: rgb(130, 255, 105);
-      justify-content: center;
-      font-size: 100%;
-      box-shadow: #fa233b;
-      
+
+   
+   
+
+
+
+
 
     
-  }
+
   
