--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,6 +105,7 @@
   margin-bottom: 5rem;
 }
 
+/* Nav stylings */
 
 * {
   background-color: #202020;
@@ -134,23 +135,55 @@
 }
 
 .navlink:hover {
-  color: #F82d48;;
+  color: #F82d48;
   cursor: pointer;
   transform: scale(1.2);
 }
+
+/* Welcome Page Stylings */
 
 .main {
   margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background-image: url(./components/images/Background.jpg);
+  background-image: url(./components/images/background.jpg);
   background-position: top center;
   background-size: cover;
 }
 
+/* About Us Stylings */
+
 .about-us {
-  color: white;
+  display: grid;
+  place-items: center;
+  color: #F82d48;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+  
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.title {
+  color: #c9c9c9;
 }
 
 /* .wyncode img {
