Added flow up feature with more CSS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,22 +3,60 @@
   margin-top: 130px;
 }
 
-
-#songlist { 
-  color: white;
-  list-style-type: none;
-  border-top: 1px solid #E2E2E2;
+#songlist {
+margin:0;
+color: white;
+position: relative;
+list-style-type: upper-roman;
+border-width: 1px;
+border-left: 1px;
+border-right: 1px;
+font-size: 21px;
+border-style: solid;
+border-radius: 10rem;
+border-color: crimson transparent;
+border-collapse: separate;
+  border-spacing: 5px;
+display: block;
+padding: 1rem;
+transition: all 1s;
+z-index: 4;
+/* padding: 10px; */
+text-align: left;
+}
+#songlist:hover { 
+  color: crimson;
+  font-size: 20px;
+  transform: scale(1.1);
+  box-shadow: 0 0 30px 0 crimson;
+  transition: 0.1s;
 }
 
 #AlbumArtistName {
-  color:#C6363D;
+  margin-top: 1px;
+  margin-left: 45px;
+  color: crimson;
 }
 
 #AlbumNames {
+margin-left: 45px;
+margin-top: 2rem;
 color:#F4F4F4;
 }
 
 #AlbumGenre {
-  color:#A1A1A8
+  color:#A1A1A8;
+  /* margin-top: 1rem; */
+  margin-bottom: 4rem;
+  margin-left: 45px;
 }
+
+.AlbumCoverPic {
+margin-left: 45px;
+}
+
+BiPlayCircle {
+cursor: pointer;
+}
+
 
