Added More CSS to Nav

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@ border-right: 1px;
 font-size: 21px;
 border-style: solid;
 border-radius: 10rem;
-border-color: crimson transparent;
+border-color: crimson ;
 border-collapse: separate;
   border-spacing: 5px;
 display: block;
