--- a/client/src/index.css
+++ b/client/src/index.css
@@ -115,23 +115,44 @@
 
 .nav {
   margin: 0;
-  padding: 0;
+  padding: 0rem;
   z-index: 1;
-  background-color: #333333;
+  height: 15px;
+  justify-content: center;
+  background-color: #202020;
+  border-bottom: solid #202020e9;
+}
+.navtext:hover {
+border: 1px;
+border-style: solid;
+border-radius: 1rem;
+border-color: crimson ;
+border-collapse: separate;
+border-spacing: 1px;
+color: crimson;
+  /* font-size: 20px; */
+transform: scale(1.1);
+box-shadow: 0 0 30px 0 crimson;
+transition: 1.0s;
 }
 
+.navtext {
+  font-size: 20px;
+}
 .navitem {
   display: inline-block;
-  background-color: #333333;
-  margin: 10px;
+  background-color: #202020;
+  margin: 0px;
+  height: 10px;
 }
 
 .navlink {
   margin-right: 40px;
+  height: 15px;
   list-style-type: none;
   font-size: 25px;
-  color: #c9c9c9;
-  background-color: #333333;
+  color: #F4F4F4;
+  background-color: #202020;
 }
 
 .navlink:hover {
@@ -142,6 +163,13 @@
 
 /* Welcome Page Stylings */
 
+#root {
+  margin: 0px;
+  padding: 0px;
+  height: 0px;
+  /* width: 0px; */
+
+}
 .main {
   margin: 0;
   padding: 0;
