--- a/client/src/components/searchForm.css
+++ b/client/src/components/searchForm.css
@@ -6,10 +6,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-     
+    opacity: 0.7;
+    
   } 
 
-  .welcome-input:hover {
+.welcome-input:hover {
     border-radius: 50px;
     border-bottom: 3px solid #fa233b;
     border-top: 3px solid #fa233b;
@@ -17,36 +18,32 @@
     background-color: crimson;
     width: 500px;
     height: 50px;
-    /* z-index: 5; */
     
-  } 
+    /* z-index: 5; */
+     
+  }   
 
  /* search bar adjustments */
   
  .welcome-input {
-  border: none;
-  box-shadow: 0 0 25px 0 crimson,
-  0 20px 25px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 50px;
-  background:crimson;
-  height: 70px;
-  width: 0px;
-  padding-right: 60px;
-  font-size: 50px;
-  font-family: "Helvetica", sans-serif;
-  cursor: pointer;
-  transition: 1s;
-  text-indent: 50px;
-  box-shadow: 0 0 25px 0 crimson,
-                0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 crimson,
+    0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    border-radius: none;
+    background:crimson;
+    height: 70px;
+    width: 90px;
+    padding-right: 60px;
+    font-size: 50px;
+    font-family: "Helvetica", sans-serif;
+    cursor: pointer;
+    transition: 1s;
+    text-indent: 20px;
+    box-shadow: 0 0 25px 0 crimson,
+                    0 20px 25px 0 rgba(0, 0, 0, 0.2);
+                    
    
 } 
 
-/* Button adjustments */
-#btn {
-   border-radius: 100px;
-   box-shadow: 0 0 25px 0 crimson;
-}
 
 
    
