--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,32 +4,25 @@
 }
 
 #songlist {
-margin:0;
-color: white;
-position: relative;
-list-style-type: upper-roman;
-border-width: 1px;
-border-left: 1px;
-border-right: 1px;
-font-size: 21px;
-border-style: solid;
-border-radius: 10rem;
-border-color: crimson ;
-border-collapse: separate;
-  border-spacing: 5px;
-display: block;
-padding: 1rem;
-transition: all 1.5s;
-z-index: 4;
-/* padding: 10px; */
-text-align: left;
+  border: 1px solid crimson;
+  /* margin: 0 10rem; */
+  color: white;
+  list-style-type: upper-roman;
+  font-size: 21px;
+  border-radius: 10rem;
+  border-color: crimson;
+  display: block;
+  padding: 1rem;
+  transition: all 1.5s;
+  text-align: left;
+  width: 700px;
 }
-#songlist:hover { 
+#songlist:hover {
   color: crimson;
   font-size: 20px;
   transform: scale(1.1);
   box-shadow: 0 0 30px 0 crimson;
-  transition: 0.1s;
+  transition: 1.5s;
 }
 
 #AlbumArtistName {
@@ -39,24 +32,22 @@ text-align: left;
 }
 
 #AlbumNames {
-margin-left: 45px;
-margin-top: 2rem;
-color:#F4F4F4;
+  margin-left: 45px;
+  margin-top: 2rem;
+  color: #f4f4f4;
 }
 
 #AlbumGenre {
-  color:#A1A1A8;
+  color: #a1a1a8;
   /* margin-top: 1rem; */
   margin-bottom: 4rem;
   margin-left: 45px;
 }
 
 .AlbumCoverPic {
-margin-left: 45px;
+  margin-left: 45px;
 }
 
 BiPlayCircle {
-cursor: pointer;
+  cursor: pointer;
 }
-
-
