--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,3 @@
-
-
 /* body {
   margin: 0;
   padding: 0;
@@ -9,8 +7,10 @@
 .cards__item {
   display: flex;
   flex: 1;
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
   border-radius: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .cards__item__link {
@@ -30,7 +30,6 @@
   width: 100%;
   /* overflow: hidden; */
 }
-
 
 .cards__item__pic-wrap::after {
   content: attr(data-category);
@@ -69,37 +68,35 @@
 /* .cards__item__info {
   /* padding: 20px 30px 30px; */
 
-
 .cards__album__text {
-  color: #F82D48;
+  color: #f82d48;
   font-size: 14px;
   text-align: left;
 }
 
 .cards__artist_text {
-  color: #F82D48;
+  color: #f82d48;
   font-size: 10px;
   text-align: left;
   opacity: 40%;
 }
 
-@media only screen and (min-width: 1200px) {
+/* @media only screen and (min-width: 1200px) {
   .content__blog__container {
     width: 84%;
   }
-}
+} */
 
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   .cards__items {
     display: flex;
   }
   .cards__item {
     margin-bottom: 2rem;
   }
-}
+} */
 
-
-.sortButtons{
+.sortButtons {
   display: flex;
   justify-content: center;
   margin-bottom: 5rem;
@@ -123,17 +120,17 @@
   border-bottom: solid #202020e9;
 }
 .navtext:hover {
-border: 1px;
-border-style: solid;
-border-radius: 1rem;
-border-color: crimson ;
-border-collapse: separate;
-border-spacing: 1px;
-color: crimson;
+  border: 1px;
+  border-style: solid;
+  border-radius: 1rem;
+  border-color: crimson;
+  border-collapse: separate;
+  border-spacing: 1px;
+  color: crimson;
   /* font-size: 20px; */
-transform: scale(1.1);
-box-shadow: 0 0 30px 0 crimson;
-transition: 1.0s;
+  transform: scale(1.1);
+  box-shadow: 0 0 30px 0 crimson;
+  transition: 1s;
 }
 
 .navtext {
@@ -151,12 +148,12 @@ transition: 1.0s;
   height: 15px;
   list-style-type: none;
   font-size: 25px;
-  color: #F4F4F4;
+  color: #f4f4f4;
   background-color: #202020;
 }
 
 .navlink:hover {
-  color: #F82d48;
+  color: #f82d48;
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -168,7 +165,6 @@ transition: 1.0s;
   padding: 0px;
   height: 0px;
   /* width: 0px; */
-
 }
 .main {
   margin: 0;
@@ -185,13 +181,13 @@ transition: 1.0s;
 .about-us {
   display: grid;
   place-items: center;
-  color: #F82d48;
+  color: #f82d48;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-} 
+}
 
 .column {
   width: 100%;
@@ -204,11 +200,11 @@ body {
   background-color: #202020 !important;
 }
 
-.card img {
+/* .card img {
   object-fit: cover;
   height: 400px;
   width: 350px;
-}
+} */
 
 Card {
   background-color: #202020;
@@ -229,7 +225,6 @@ Card {
 /* .wyncode img {
 //going to center the logo
 } */
-
 
 .portraits {
   display: grid;
