testing what i changed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+
+
 /* body {
   margin: 0;
   padding: 0;
@@ -7,10 +9,8 @@
 .cards__item {
   display: flex;
   flex: 1;
-  /* margin: 0 1rem; */
+  margin: 0 1rem;
   border-radius: 10px;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .cards__item__link {
@@ -30,6 +30,7 @@
   width: 100%;
   /* overflow: hidden; */
 }
+
 
 .cards__item__pic-wrap::after {
   content: attr(data-category);
@@ -68,35 +69,37 @@
 /* .cards__item__info {
   /* padding: 20px 30px 30px; */
 
+
 .cards__album__text {
-  color: #f82d48;
+  color: #F82D48;
   font-size: 14px;
   text-align: left;
 }
 
 .cards__artist_text {
-  color: #f82d48;
+  color: #F82D48;
   font-size: 10px;
   text-align: left;
   opacity: 40%;
 }
 
-/* @media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .content__blog__container {
     width: 84%;
   }
-} */
+}
 
-/* @media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .cards__items {
     display: flex;
   }
   .cards__item {
     margin-bottom: 2rem;
   }
-} */
+}
 
-.sortButtons {
+
+.sortButtons{
   display: flex;
   justify-content: center;
   margin-bottom: 5rem;
@@ -108,6 +111,8 @@
   background-color: #202020;
   padding: 0;
   margin: 0;
+  animation: fadeIn 2s;
+  opacity: 1;
 }
 
 .nav {
@@ -120,17 +125,10 @@
   border-bottom: solid #202020e9;
 }
 .navtext:hover {
-  border: 1px;
-  border-style: solid;
-  border-radius: 1rem;
-  border-color: crimson;
-  border-collapse: separate;
-  border-spacing: 1px;
-  color: crimson;
+border: 1px;
+color: whitesmoke;
   /* font-size: 20px; */
-  transform: scale(1.1);
-  box-shadow: 0 0 30px 0 crimson;
-  transition: 1s;
+/* box-shadow: 0 0 30px 0 crimson; */
 }
 
 .navtext {
@@ -140,22 +138,24 @@
   display: inline-block;
   background-color: #202020;
   margin: 0px;
-  height: 10px;
+  height: 15px;
 }
 
 .navlink {
-  margin-right: 40px;
+  margin-left: 130px;
+  margin-right:130px;
   height: 15px;
   list-style-type: none;
-  font-size: 25px;
-  color: #f4f4f4;
+  font-size: 20px;
+  color: crimson;
   background-color: #202020;
 }
 
 .navlink:hover {
-  color: #f82d48;
+  color: whitesmoke;
   cursor: pointer;
-  transform: scale(1.2);
+  transform: scale(1.1);
+  transition: all 1.5s;
 }
 
 /* Welcome Page Stylings */
@@ -165,6 +165,7 @@
   padding: 0px;
   height: 0px;
   /* width: 0px; */
+
 }
 .main {
   margin: 0;
@@ -181,7 +182,7 @@
 .about-us {
   display: grid;
   place-items: center;
-  color: #f82d48;
+  color: #F82d48;
 }
 
 body {
@@ -190,33 +191,21 @@ body {
 }
 
 .column {
-  width: 100%;
-  background-color: #202020;
+  float: left;
+  width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
 
 .card {
-  background-color: #202020 !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+  
 }
 
-/* .card img {
-  object-fit: cover;
-  height: 400px;
-  width: 350px;
-} */
-
-Card {
-  background-color: #202020;
-}
-/* .card img{
-    max-width: 100%;
-    max-height: 100%;
-} */
-/* 
 .container {
   padding: 0 16px;
-}  */
+}
 
 .title {
   color: #c9c9c9;
@@ -225,15 +214,3 @@ Card {
 /* .wyncode img {
 //going to center the logo
 } */
-
-.portraits {
-  display: grid;
-  width: 100%;
-  justify-content: center;
-  grid-template-columns: auto auto;
-}
-
-.container {
-  width: 100%;
-  text-align: center;
-}
