--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,6 +65,8 @@
 
 .cards__item__link:hover {
   transform: scale(1.1);
+  transition: all 1.5s;
+  -o-transition: all 1.5s;
   cursor: pointer;
 }
 
@@ -103,7 +105,6 @@
 
 .sortButtons{
   margin-top: 60px;
-  color: crimson;
   display: flex;
   justify-content: center;
   margin-bottom: 5rem;
@@ -115,7 +116,6 @@
   background-color: #202020;
   padding: 0;
   margin: 0;
-  animation: fadeIn 2s;
   opacity: 1;
 }
 
